--- a/src/styles/components/cards.scss
+++ b/src/styles/components/cards.scss
@@ -18,6 +18,10 @@
 
 .cards:hover {
     transform: rotateY(180deg);
+    transition: all 0.6s ease;
+    .thefront {
+        display: none;
+    }
 }
 
 .cards i {
@@ -32,7 +36,6 @@
     position: absolute;
     margin-top: -150px;
     z-index: 1;
-    max-width: 100%;
     width: 100%;
 }
 
@@ -58,8 +61,8 @@
     height: 100%;
     backface-visibility: hidden;
     transform: rotateY(180deg);
-    color: $orange-auto_doc;
-    background-color: $orange-auto_doc;
+    //color: $orange-auto_doc;
+    //background-color: $orange-auto_doc;
     border-radius: 10px;
     display: flex;
     flex-direction: column;
